<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="32dp"
    android:background="@drawable/background_color"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:background="@drawable/rectangle__svg"
        android:layout_width="wrap_content"
        android:layout_gravity="start|center_vertical"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/rectangle_design_element" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvGreetingText"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:text="@string/greeting_text"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="42sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSubHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub_header_text"
        android:layout_marginTop="9dp"
        android:textColor="@color/secondary_text_color"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
    <LinearLayout
        android:layout_marginTop="37dp"
        android:padding="2dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:background="@drawable/person_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rectangle_design_element" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etFullName"
            android:textColorHint="@color/secondary_text_color"
            android:layout_width="match_parent"
            android:minHeight="48dp"
            android:layout_marginStart="15dp"
            android:hint="@string/your_full_name"
            android:textColor="@color/secondary_text_color"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="37dp"
        android:padding="2dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:background="@drawable/person_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rectangle_design_element" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etUserName"
            android:textColorHint="@color/secondary_text_color"
            android:layout_width="match_parent"
            android:minHeight="48dp"
            android:layout_marginStart="15dp"
            android:hint="@string/username"
            android:textColor="@color/secondary_text_color"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="37dp"
        android:padding="2dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBack"
            android:layout_width="58dp"
            android:drawableStart="@drawable/back_arrow"
            android:paddingHorizontal="21dp"
            android:paddingVertical="24.5dp"
            android:layout_height="58dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/back_button_form"
            android:contentDescription="@string/rectangle_design_element" />
        
        <LinearLayout
            android:id="@+id/nextBtn"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:clickable="true"
            android:gravity="center"
            android:background="@drawable/next_button_form_design"
            android:layout_height="match_parent"
            android:focusable="true">
            
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:text="@string/next"/>
            
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:src="@drawable/next_arrow"
                android:contentDescription="@string/next_arrow_icon" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>